<resources>
    <string name="app_name">Firebase Login</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
</resources>
